# SMIdea

./: .gitignore  README.md  docker-compose.yml  init.sql  main.cpp
Backend/: .dockerignore  CMakeLists.txt  Discussion.cpp  Discussion.hpp  Dockerfile  PQWrapper.cpp  PQWrapper.hpp  Post.cpp  Post.hpp  User.cpp  User.hpp  main.cpp
Backend/smi-lib/: Post.cpp  Post.hpp  User.cpp  User.hpp
Frontend/: Dockerfile  index.html  nginx.conf  script.js  style.css
Frontend/css/: style.css
Frontend/js/: script.js
